# flower-classifier

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  train.py
imlo_coursework/: cnn.py  load_data.py  main.py  normal_values.py  visualise_data.py
