[tool.poetry]
name = "imlo-coursework"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Cooper Love <cooperjlove@proton.me>"]
readme = "README.md"
repository = "https://github.com/cooperjl/imlo-coursework"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
